--- a/index.html
+++ b/index.html
@@ -113,24 +113,25 @@
             <form id="checkOutDetailsModal">
                 <div>
                     <label for="name">Nimi:</label>
-                    <input type="text" id="name" name="name">
+                    <input type="text" id="name" name="name" placeholder="Ossi Ostaja" required>
                 </div>
                 <div>
                     <label for="address">Osoite:</label>
-                    <input type="text" id="address" name="address">
+                    <input type="text" id="address" name="address" placeholder="Esim. Ostajankatu 2B 17" required>
                 </div>
                 <div>
                     <label for="postcode">Postinumero:</label>
-                    <input type="number" id="postcode" name="postcode">
+                    <input type="text" id="postcode" name="postcode" placeholder="Esim. 44100" pattern="[0-9]{5}" required>
                 </div>
                 <div>
                     <label for="email">Sähköposti:</label>
-                    <input type="email" id="email" name="email">
+                    <input type="email" id="email" name="email" placeholder="joku@sahkoposti.com" required>
                 </div>
                 <div>
                     <label for="phonenumber">Puhelinnumero:</label>
-                    <input type="tel" id="phonenumber" name="phonenumber" placeholder="+358123456789">
+                    <input type="tel" id="phonenumber" name="phonenumber" placeholder="+358123456789" pattern="\+358[0-9]{9}" required>
                 </div>
+                
                 <div class="paymentOption">
                     <label>
                         <input type="radio" name="payment" value="visa" id="visacard">
@@ -140,17 +141,18 @@
                     </label>
                 </div>
                 <div>
+                
                     <label for="cardHolder">Kortin haltija:</label>
-                    <input type="text" id="cardHolder" name="cardholder">
+                    <input type="text" id="cardHolder" name="cardholder" placeholder="Ossi Ostaja" required>
                     <label for="cardNumber">Kortin nro.</label>
-                    <input type="number" id="cardNumber" name="cardNumber">
+                    <input type="number" id="cardNumber" name="cardNumber" placeholder="1234 5678 9012 3456" pattern="[0-9]{16}" required>
                     <label for="expDate">Kortin voimassaoloaika:</label>
-                    <input type="text" id="expDate" name="expDate" placeholder="MM/YY" pattern="[0-9]{2}/[0-9]{2}">
+                    <input type="text" id="expDate" name="expDate" placeholder="MM/YY" pattern="[0-9]{2}/[0-9]{2}" required>
                     <label for="securityCode">CVV/CVC:</label>
-                    <input type="password" id="securityCode" name="securityCode" maxlength="3" required>
+                    <input type="number" id="securityCode" name="securityCode" required>
                 </div>
                 <p id="inValidCheckOut" style="color: blue;"></p>
-                <button id="confirmOrder">Vahvista tilaus</button>
+                <button type="submit" id="confirmOrder">Vahvista tilaus</button>
             </form>
         </div>
     </div>
