--- a/imoitus.html
+++ b/imoitus.html
@@ -44,10 +44,12 @@
         <h1 id="tuoteHintaH1"></h1>
         <button id="cartBtn" onclick="addToCart()">
             <img style="max-width: 100%; max-height: 100%;" src="kuvat/shoppingCart.png" >
-            Add to cart
+            Lisää ostoskoriin
+        </button><br>
+        <button id="takasOstoksille" onclick="openMainPage()">
+            Jatka ostoksia
         </button>
     </div>
 <script src="ilmoitus.js"></script>
 <script src="login.js"></script>
 </html> 
-
