käyttäjä voi lisätä vain yhden kuvan

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
                 <div>
                     <label for="productPicture">Lisää kuvat:</label>
-                    <input type="file" id="productPicture" name="productPicture" accept="image/*" multiple>
+                    <input type="file" id="productPicture" name="productPicture" accept="image/*">
                     <div id="previewPictures"></div>
                 </div>
                 <p id="inValidDetails" style="color: blue;"></p>
